# projectify

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
backend/cfg/: Config.hpp  init_db.sql
backend/cmake/: GetCPM.cmake
backend/src/: CMakeLists.txt  main.cpp
backend/src/api/: API.hpp
backend/src/api/link/: DeleteLink.cpp  GetLinks.cpp  RegisterLink.cpp
backend/src/api/project/: DeleteProject.cpp  GetProjects.cpp  RegisterProject.cpp
backend/src/api/task/: DeleteTask.cpp  GetTasks.cpp  RegisterTask.cpp  ToggleTaskStatus.cpp
backend/src/api/user/: LoginUser.cpp  RegisterUser.cpp
backend/src/db/: Database.cpp  Database.hpp  LinkDB.cpp  ProjectDB.cpp  TaskDB.cpp  UserDB.cpp
backend/src/logger/: Logger.hpp
backend/src/middleware/: JwtValidator.cpp  JwtValidator.hpp  Middlewares.hpp  RateLimiter.cpp  RateLimiter.hpp
backend/src/models/: Link.cpp  Models.hpp  Project.cpp  Task.cpp  User.cpp
backend/src/utils/: Utils.cpp  Utils.hpp
backend/tests/: test_jwt.py  test_link.py  test_project.py  test_task.py  test_user.py
frontend-cli/: .gitignore  CMakeLists.txt
frontend-cli/src/: CMakeLists.txt  Types.hpp  main.cpp
frontend-cli/src/api/: API.cpp  API.hpp
frontend-cli/src/app/: ComponentManager.cpp  ComponentManager.hpp  PagesManager.cpp  PagesManager.hpp
frontend-cli/src/components/: Banner.cpp  Components.hpp  DashboardPage.cpp  HomePage.cpp  LinkCard.cpp  LinkList.cpp  ProjectCard.cpp  ProjectList.cpp  SignInPage.cpp  SignUpPage.cpp  TaskCard.cpp  TaskList.cpp  Toast.cpp  Utils.cpp
frontend-cli/src/pages/: DashboardPage.cpp  HomePage.cpp  NewLinkPage.cpp  NewProjectPage.cpp  NewTaskPage.cpp  Pages.hpp  ProjectDetailsPage.cpp  SignInPage.cpp  SignUpPage.cpp
frontend-cli/src/utils/: Utils.cpp  Utils.hpp
